--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     "bootstrap-icons": "^1.11.3",
     "cors": "^2.8.5",
     "express": "^4.19.2",
+    "gh-pages": "^6.1.1",
     "nodemailer": "^6.9.13",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.2",
