--- a/package.json
+++ b/package.json
@@ -11,7 +11,6 @@
     "bootstrap-icons": "^1.11.3",
     "cors": "^2.8.5",
     "express": "^4.19.2",
-    "gh-pages": "^6.1.1",
     "nodemailer": "^6.9.13",
     "react": "^18.3.1",
     "react-bootstrap": "^2.10.2",
@@ -49,5 +48,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "gh-pages": "^6.1.1"
   }
 }
